--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,36 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    button {
+        @apply p-2 px-8 border-2 rounded-full transition-all;
+        @apply text-xl font-bold;
+    }
+
+    input {
+        @apply border-none focus:outline-none;
+        @apply text-xl text-black placeholder-gray-400;
+    }
+
+    input[type='number']::-webkit-outer-spin-button,
+    input[type='number']::-webkit-inner-spin-button {
+	    @apply hidden;
+    }
+
+    input[type='range'] {
+        @apply appearance-none w-full h-0.5 rounded-full bg-gray-200 hover:bg-black outline-none transition-all ease-in-out cursor-pointer;
+    }
+
+    input[type='range']::-webkit-slider-thumb {
+        @apply appearance-none w-2.5 h-2.5 rounded-full bg-black cursor-pointer;
+    }
+}
+
+@layer components {
+    .btn-black {
+        @apply border-black;
+        @apply hover:bg-gray-50 active:bg-gray-100;
+        @apply text-black;
+    }
+}
