--- a/src/index.css
+++ b/src/index.css
@@ -74,7 +74,12 @@
 
     input[type='range']::-webkit-slider-thumb {
         @apply outline-none appearance-none w-2 h-2 rounded-full bg-black cursor-pointer;
-        @apply transition-all;
+        @apply transition-all ease-in-out;
+    }
+
+    input[type='range']:hover::-webkit-slider-thumb,
+    input[type='range']:focus::-webkit-slider-thumb {
+        @apply transform scale-125;
     }
 
     input[type='radio'] {
