--- a/src/index.css
+++ b/src/index.css
@@ -31,15 +31,15 @@
 
 @layer base {
     html, body, #root {
-        @apply h-full;
+        @apply h-full bg-white  text-black;
     }
 
     label {
-        @apply text-lg;
+        @apply text-lg sm:text-xl;
     }
     
     a {
-        @apply text-lg no-underline outline-none tap-highlight-transparent;
+        @apply text-lg sm:text-xl no-underline outline-none tap-highlight-transparent;
         -webkit-appearance: none;
         -moz-appearance: none;
     }
@@ -47,14 +47,14 @@
     button {
         @apply py-2 px-6 border-2 border-gray-100 rounded-full outline-none appearance-none tap-highlight-transparent transition-all ease-in-out;
         @apply hover:border-gray-300 active:border-black;
-        @apply text-lg text-black;
+        @apply text-lg sm:text-xl text-black;
         -webkit-appearance: none;
         -moz-appearance: none;
     }
 
     input {
         @apply border-none outline-none appearance-none tap-highlight-transparent;
-        @apply text-lg text-black placeholder-gray-400;
+        @apply text-lg sm:text-xl text-black placeholder-gray-400;
         -webkit-appearance: none;
         -moz-appearance: none;
     }
@@ -89,17 +89,10 @@
     input[type='radio'] + label {
         @apply cursor-pointer select-none tap-highlight-transparent;
         @apply py-0.5 px-3 border-2 border-white rounded-full transition-all ease-in-out;
-        @apply hover:border-gray-300 focus:border-black active:border-black;
+        @apply hover:border-gray-100 focus:border-black active:border-black;
     }
 
     input[type='radio']:checked + label {
         @apply border-black;
-    }
-}
-
-
-@layer components {
-    .tablink {
-        @apply py-1 px-5 border-2 rounded-full border-white hover:border-gray-300 focus:border-black active:border-black transition-colors;
     }
 }
