--- a/src/index.css
+++ b/src/index.css
@@ -79,17 +79,17 @@
     }
 
     input[type='range'] {
-        @apply w-full h-0.5 rounded-full bg-gray-100 hover:bg-gray-300 focus:bg-black transition-all ease-in-out cursor-pointer;
+        @apply w-full h-1 rounded-full bg-gray-100 hover:bg-gray-200 transition-all ease-in-out cursor-pointer;
     }
 
     input[type='range']::-webkit-slider-thumb {
-        @apply outline-none appearance-none w-2 h-2 rounded-full bg-black cursor-pointer;
+        @apply outline-none appearance-none w-2.5 h-2.5 rounded-full bg-black cursor-pointer;
         @apply transition-all ease-in-out;
     }
 
     input[type='range']:hover::-webkit-slider-thumb,
-    input[type='range']:focus::-webkit-slider-thumb {
-        @apply transform scale-125;
+    input[type='range']:active::-webkit-slider-thumb {
+        @apply transform scale-150;
     }
 
     input[type='radio'] {
