--- a/src/index.css
+++ b/src/index.css
@@ -41,7 +41,7 @@
 
 @layer base {
     html, body, #root {
-        @apply h-full bg-white  text-black;
+        @apply h-full text-black;
     }
 
     label {
@@ -55,8 +55,8 @@
     }
 
     button {
-        @apply py-2 px-6 border-2 border-gray-100 rounded-full outline-none appearance-none tap-highlight-transparent transition-all ease-in-out;
-        @apply hover:border-gray-300 active:border-black;
+        @apply py-2 px-6 rounded-full outline-none appearance-none tap-highlight-transparent transition-all ease-in-out;
+        @apply border-2 border-gray-100 hover:border-gray-300 active:border-black;
         @apply text-lg sm:text-xl text-black;
         -webkit-appearance: none;
         -moz-appearance: none;
@@ -64,13 +64,9 @@
 
     input {
         @apply border-none outline-none appearance-none tap-highlight-transparent;
-        @apply text-lg sm:text-xl text-black placeholder-gray-400;
+        @apply bg-transparent text-lg sm:text-xl text-black placeholder-gray-400;
         -webkit-appearance: none;
         -moz-appearance: none;
-    }
-
-    input[type='number'] {
-        @apply w-full;
     }
 
     input[type='number']::-webkit-outer-spin-button,
@@ -79,16 +75,16 @@
     }
 
     input[type='range'] {
-        @apply w-full h-0.5 rounded-full bg-gray-100 hover:bg-gray-300 focus:bg-black transition-all ease-in-out cursor-pointer;
+        @apply w-full h-1 rounded-full bg-gray-100 hover:bg-gray-300 transition-all ease-in-out cursor-pointer;
     }
 
     input[type='range']::-webkit-slider-thumb {
-        @apply outline-none appearance-none w-2 h-2 rounded-full bg-black cursor-pointer;
+        @apply outline-none appearance-none w-2.5 h-2.5 rounded-full bg-black cursor-pointer;
         @apply transition-all ease-in-out;
     }
 
     input[type='range']:hover::-webkit-slider-thumb,
-    input[type='range']:focus::-webkit-slider-thumb {
+    input[type='range']:active::-webkit-slider-thumb {
         @apply transform scale-125;
     }
 
@@ -98,11 +94,11 @@
 
     input[type='radio'] + label {
         @apply cursor-pointer select-none tap-highlight-transparent;
-        @apply py-0.5 px-3 border-2 border-white rounded-full transition-all ease-in-out;
-        @apply hover:border-gray-100 focus:border-black active:border-black;
+        @apply py-0.5 px-3 rounded-full transition-all ease-in-out;
+        @apply border-2 border-transparent hover:border-gray-100 focus:border-black active:border-black;
     }
 
     input[type='radio']:checked + label {
-        @apply border-black;
+        @apply border-2 border-black;
     }
 }
