--- a/src/index.css
+++ b/src/index.css
@@ -41,10 +41,10 @@
 
 @layer base {
     html, body, #root {
-        @apply h-full text-black;
+        @apply h-full bg-white text-black;
     }
 
-    label {
+    label, span {
         @apply text-lg sm:text-xl;
     }
     
@@ -55,13 +55,13 @@
     }
 
     button {
-        @apply py-2 px-6 rounded-full outline-none appearance-none tap-highlight-transparent transition-all ease-in-out;
-        @apply border-2 border-gray-100 hover:border-gray-300 active:border-black;
-        @apply text-lg sm:text-xl text-black;
+        @apply py-2 px-6 rounded-3xl outline-none appearance-none tap-highlight-transparent transition-all ease-in-out;
+        @apply hover:bg-gray-100 border-2 active:bg-gray-300;
+        @apply text-lg sm:text-xl;
         -webkit-appearance: none;
         -moz-appearance: none;
     }
-
+    
     input {
         @apply border-none outline-none appearance-none tap-highlight-transparent;
         @apply bg-transparent text-lg sm:text-xl text-black placeholder-gray-400;
@@ -94,11 +94,11 @@
 
     input[type='radio'] + label {
         @apply cursor-pointer select-none tap-highlight-transparent;
-        @apply py-0.5 px-3 rounded-full transition-all ease-in-out;
-        @apply border-2 border-transparent hover:border-gray-100 focus:border-black active:border-black;
+        @apply py-1 px-3.5 rounded-3xl transition-all ease-in-out;
+        @apply border-2 border-transparent hover:border-gray-300 focus:border-black active:border-black;
     }
 
     input[type='radio']:checked + label {
-        @apply border-2 border-black;
+        @apply border-black;
     }
 }
