--- a/src/components/radio-input/radio-input.css
+++ b/src/components/radio-input/radio-input.css
@@ -6,8 +6,9 @@
     @apply cursor-pointer select-none tap-highlight-transparent;
     @apply py-1 px-3.5 rounded-3xl transition-all;
     @apply border-2 border-transparent hover:border-gray-300 focus:border-black active:border-black;
+    @apply dark:hover:border-gray-800 dark:focus:border-white dark:active:border-white;
 }
 
 .radio-input:checked + .radio-label {
-    @apply border-black;
+    @apply border-black dark:border-white;
 }
