--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -1,3 +1,3 @@
 .card {
-    @apply flex flex-col justify-start gap-4 bg-gray-50 text-black min-w-min rounded-3xl p-4 sm:p-6 animate-fadein;
+    @apply flex flex-col justify-start gap-4 bg-gray-50 dark:bg-gray-900 min-w-min rounded-3xl p-4 sm:p-6 animate-fadein;
 }
