--- a/src/components/input/input.css
+++ b/src/components/input/input.css
@@ -1,4 +1,4 @@
 .input {
     @apply border-none outline-none appearance-none tap-highlight-transparent;
-    @apply bg-transparent text-lg sm:text-xl text-black placeholder-gray-400;
+    @apply bg-transparent text-lg sm:text-xl placeholder-gray-400;
 }
