--- a/src/components/large-control/large-control.css
+++ b/src/components/large-control/large-control.css
@@ -1,5 +1,5 @@
 .large-control {
-    @apply flex flex-grow flex-col gap-1 pb-1;
+    @apply flex flex-1 flex-col gap-1 pb-1;
 }
 
 .large-control__content {
