--- a/src/components/range-input/range-input.css
+++ b/src/components/range-input/range-input.css
@@ -1,9 +1,9 @@
 .range-input {
-    @apply w-full h-1 rounded-full bg-gray-100 hover:bg-gray-300 transition-all cursor-pointer;
+    @apply w-full h-1 rounded-full bg-gray-100 dark:bg-gray-800 hover:bg-gray-300 dark:hover:bg-gray-700 transition-all cursor-pointer;
 }
 
 .range-input::-webkit-slider-thumb {
-    @apply outline-none appearance-none w-2.5 h-2.5 rounded-full bg-black cursor-pointer;
+    @apply outline-none appearance-none w-2.5 h-2.5 rounded-full bg-black dark:bg-white cursor-pointer;
     @apply transition-all ease-in-out;
 }
 
