--- a/src/components/color-picker/color-picker.css
+++ b/src/components/color-picker/color-picker.css
@@ -3,7 +3,7 @@
 }
 
 .color-picker__title {
-    @apply uppercase text-3xl font-semibold mb-4;
+    @apply uppercase text-3xl mb-2;
 }
 
 .color-picker__controls {
