--- a/src/components/tab-link/tab-link.css
+++ b/src/components/tab-link/tab-link.css
@@ -1,3 +1,3 @@
 .tab-link {
-    @apply flex flex-nowrap items-center p-4 sm:p-6 justify-center min-w-max text-3xl;
+    @apply flex flex-nowrap items-center rounded-3xl p-4 sm:p-6 justify-center min-w-max text-3xl;
 }
